# sensel-api

./: .gitignore  CMakeLists.txt  README.md
apps/morph-cataret/: CMakeLists.txt  README.md
apps/morph-cataret/src/: corpus.cpp  corpus.h  descriptors.cpp  descriptors.h  granular.cpp  granular.h  main.cpp  miniaudio_impl.cpp  morph.cpp  morph.h
include/sensel/: morph.h
sensel-examples/sensel-python/: example_1_hello_sensel.py  example_2_sensel_contacts.py  example_3_sensel_forces.py
sensel-lib/: CMakeLists.txt  build_mac.sh
sensel-lib-wrappers/sensel-lib-python/: sensel.py
sensel-lib/src/: sensel.c  sensel.h  sensel_device.h  sensel_frame_counter.c  sensel_frame_counter.h  sensel_serial.h  sensel_serial_linux.c  sensel_serial_win.c
sensel-lib/tests/: sensel_frame_counter_tests.c
src/sensel/: morph.cpp  port_recovery.cpp  port_recovery.hpp
tests/: fake_sensel.cpp  fake_sensel.hpp  morph_tests.cpp
